# screencomposer

./: .gitignore  .rustfmt  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  RENAME_SUMMARY.md  RENDERING_METRICS_SUMMARY.md  cliff.toml  compile_wlcs.sh  otto_config.example.toml  otto_config.toml  otto_config.winit.toml  sc_config.example.toml  sc_config.toml  screenshare-plan.md
.github/ISSUE_TEMPLATE/: bug.md  feature_request.md
.github/workflows/: ci.yml
assets/: genie.sksl
components/apps-manager/: Cargo.toml  README.md
components/xdg-desktop-portal-otto/: Cargo.toml  README.md  ScreenCast-backend-spec.md  ScreenCast-frontend-spec.md  otto.portal
components/xdg-desktop-portal-otto/src/: lib.rs  main.rs  watchdog.rs
components/xdg-desktop-portal-otto/src/otto_client/: mod.rs  screencast.rs  settings.rs
components/xdg-desktop-portal-otto/src/portal/: interface.rs  mod.rs  session.rs  settings.rs  state.rs
components/xdg-desktop-portal-otto/src/screencomposer_client/: screencast.rs
components/xdg-desktop-portal-otto/tests/: streams.rs  validation.rs
components/xdg-desktop-portal-sc/: Cargo.toml  README.md  ScreenCast-backend-spec.md  ScreenCast-frontend-spec.md
components/xdg-desktop-portal-sc/src/: lib.rs  main.rs  watchdog.rs
components/xdg-desktop-portal-sc/src/portal/: interface.rs  request.rs  session.rs  stream.rs
components/xdg-desktop-portal-sc/src/screencomposer_client/: mod.rs  screencast.rs
components/xdg-desktop-portal-sc/tests/: streams.rs  validation.rs
docs/: BASELINE_RESULTS_ANALYSIS.md  METRICS_IMPLEMENTATION_COMPLETE.md  PARTIAL_RENDERING_COMPLETE.md  dock-design.md  drm_plane.md  expose.md  foreign-toplevel.md  keyboard_mapping.md  keyboard_remap_refactor.md  layer-shell.md  measuring-rendering-performance.md  metrics-backend-integration.md  metrics-integration-proof.md  metrics-quick-reference.md  project-structure.md  render_loop.md  rendering.md  sc-layer-protocol-design.md  scene-element-damage-clipping.md  scene-element-safety.md  screenshare.md  screenshot-plan.md  theme-integration.md  virtual-screen.md  wayland.md  window-move.md  window-screenshare-plan.md  xdg-desktop-portal.md
docs/developer/: color-scheme-setting.md  credits.md  dock-design.md  drm_plane.md  expose.md  foreign-toplevel.md  intro.md  project-structure.md  render_loop.md  rendering.md  screenshare.md  screenshot-plan.md  wayland.md
docs/issues/: keyboard-shortcut-config.md  screenshare-phase-0.md  screenshare-phase-1.md  screenshare-phase-2.md  screenshare-phase-3.md  screenshare-phase-4.md  screenshare-phase-5.md  screenshare-phase-6.md
docs/plans/: damage_audit_report.md  partial_rendering_quick_start.md  skia_partial_rendering_plan.md
docs/user/: clipboard.md  configuration.md  intro.md
issues/: dock-bookmarking-plan.md
projects/client-rainbow/: Cargo.toml
projects/client-rainbow/src/: main.rs
projects/xdg-desktop-portal-sc/: Cargo.toml  README.md
projects/xdg-desktop-portal-sc/src/: main.rs  portal.rs
protocols/: sc-layer-v1.xml
sample-clients/hello-design/: Cargo.toml  README.md
sample-clients/hello-design/docs/: MenuBar.md  client-compositor-architecture.md  surface-refactoring-complete.md  surface-refactoring.md
sample-clients/hello-design/examples/: menu_bar.rs  simple_app.rs  simple_menu.rs  simple_window.rs
sample-clients/hello-design/src/: app_runner.rs  lib.rs  main.rs  wayland_handlers.rs
sample-clients/hello-design/src/components/: mod.rs
sample-clients/hello-design/src/components/layer/: mod.rs  surface.rs
sample-clients/hello-design/src/components/menu/: data.rs  drawing.rs  mod.rs  surface.rs
sample-clients/hello-design/src/components/menu_bar/: mod.rs  surface.rs
sample-clients/hello-design/src/components/simple_window/: mod.rs
sample-clients/hello-design/src/components/window/: README.md  mod.rs
sample-clients/hello-design/src/rendering/: context.rs  menu.rs  mod.rs  surface.rs
sample-clients/hello-design/src/surfaces/: common.rs  mod.rs  popup.rs  subsurface.rs  toplevel.rs
sample-clients/hello-layers/: Cargo.toml
sample-clients/pipewire-video-source/: Cargo.toml  README.md
sample-clients/pipewire-video-source/src/: main.rs
sample-clients/submenu/: Cargo.toml
sample-clients/submenu-gtk/: Cargo.toml
sample-clients/submenu/src/: main.rs
scripts/: README.md  check-xkb-config.sh  compare_metrics.sh  dbus.sh  kwallet.sh  measure_baseline.sh  pipewire.sh  portal.sh  show-keys.sh  start_session.sh  test-screenshare.sh  wifi.sh
src/: config.rs  cursor.rs  drawing.rs  focus.rs  input.rs  input_handler.rs  interactive_view.rs  lib.rs  main.rs  render.rs  render_metrics.rs  renderer.rs  settings_service.rs  skia_renderer.rs  state.rs  textures_storage.rs  udev.rs  utils.rs  view.rs  winit.rs  x11.rs
src/app_switcher/: app_icon_view.rs  appswitcher_view.rs  mod.rs  state.rs  view.rs
src/config/: default_apps.rs  mod.rs  shortcuts.rs
src/debug/: fps.rs
src/grabs/: mod.rs  move_grab.rs  resize_grab.rs
src/handlers/: compositor.rs  decoration.rs  element.rs  mod.rs  ssd.rs  xdg_shell.rs
src/input/: actions.rs  gestures.rs  keyboard.rs  mod.rs  pointer.rs  tablet.rs
src/render_elements/: app_switcher.rs  custom_render_elements.rs  layers_element.rs  mod.rs  output_render_elements.rs  scene_element.rs  skia_element.rs  workspace_render_elements.rs
src/renderer/: egl_context.rs  frame.rs  layers_renderer.rs  mod.rs  skia_surface.rs  sync.rs  textures.rs
src/sc_layer_shell/: mod.rs  protocol.rs
src/screencopy/: mod.rs  protocol.rs
src/screenshare/: dbus_service.rs  frame_tap.rs  headless.rs  mod.rs  pipewire.rs  pipewire_stream.rs  policy.rs  session_tap.rs
src/shell/: element.rs  grabs.rs  layer.rs  mod.rs  ssd.rs  x11.rs  xdg.rs
src/state/: data_device_handler.rs  dnd_grab_handler.rs  mod.rs  scene.rs  (+14 more)
website/: .gitignore  README.md  build-docs.sh  dev.sh  hugo.toml  watch-docs.sh
wlcs_otto/: Cargo.toml
wlcs_screencomposer/: Cargo.toml
wlcs_screencomposer/src/: ffi_api.rs  ffi_wrappers.rs  lib.rs  main_loop.rs  renderer.rs
(+87 files in other folders)
