[package]
name = "screen-composer"
authors = ["Riccardo Canalicchio <riccardo.canalicchio@gmail.com>"]
version = "0.1.6"
edition = "2021"
license = "MIT"
rust-version = "1.80.0"

[dependencies]
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
bitflags = "2.2.1"
gl-rs = { package = "gl", version = "0.14.0" }
wayland-server = "0.30.0"
wayland-scanner = "0.30.0"
wayland-backend = "0.1.0"
image = { version = "0.24.5", optional = true }
xcursor = { version = "0.3.3", optional = true }
xkbcommon = "0.6.0"

tracing = { version = "0.1.37", features = [
    "max_level_trace",
    "release_max_level_debug",
] }
fps_ticker = { version = "1.0.0", optional = true }
renderdoc = { version = "0.11.0", optional = true }

puffin_http = { version = "0.13", optional = true }
profiling = { version = "1.0" }
thiserror = "1"
rand = "0.8"
freedesktop-icons = "0.2.4"
xdgkit = "3.2.5"
freedesktop-desktop-entry = "0.5.0"
usvg = "0.37.0"
skia-bindings = {version = "0.70", default-features = true }
tokio = { version = "1", features = ["full"] }
skia-safe = "0.70"

[dependencies.layers]
# path = "../layers"
git = "https://github.com/nongio/layers"
features = ["export-taffy"]

[dependencies.smithay-drm-extras]
# path = "../smithay/smithay-drm-extras"
git = "https://github.com/Smithay/smithay"
optional = true

[dependencies.smithay]
# path = "../smithay"
git = "https://github.com/Smithay/smithay"
default-features = false
features = [
    "backend_winit",
    "wayland_frontend",
    "desktop",
    "backend_gbm",
    "backend_drm",
]

[dependencies.x11rb]
default-features = false
features = ["composite"]
optional = true
version = "0.12.0"


# [workspace]
# members = ["wlcs_screencomposer"]


[features]
default = ["egl", "winit", "x11", "udev", "debug", "profile-with-puffin"]
debug = ["fps_ticker", "image/png", "renderdoc"]
egl = ["smithay/use_system_lib", "smithay/backend_egl"]
test_all_features = ["default", "debug"]
udev = [
    "smithay-drm-extras",
    "smithay/backend_libinput",
    "smithay/backend_udev",
    "smithay/backend_drm",
    "smithay/backend_gbm",
    "smithay/backend_vulkan",
    "smithay/backend_egl",
    "smithay/backend_session_libseat",
    "image",
    "smithay/renderer_gl",
    "smithay/renderer_multi",
    "xcursor",
]
winit = ["smithay/backend_winit", "smithay/backend_drm"]
x11 = [
    "smithay/backend_x11",
    "x11rb",
    "smithay/renderer_gl",
    "smithay/backend_vulkan",
]
xwayland = [
    "smithay/xwayland",
    "x11rb",
    "smithay/x11rb_event_source",
    "xcursor",
]
profile-with-puffin = ["profiling/profile-with-puffin", "puffin_http"]
profile-with-tracy = ["profiling/profile-with-tracy"]
profile-with-tracy-mem = ["profile-with-tracy"]
renderer_sync = []
