[package]
name = "screen-composer"
authors = ["Riccardo Canalicchio <riccardo.canalicchio@gmail.com>"]
version = "0.12.0"
edition = "2021"
license = "MIT"
rust-version = "1.85.0"

[dependencies]
bitflags = "2.2.1"
gl-rs = { package = "gl", version = "0.14.0" }
wayland-server = "0.31"
wayland-scanner = "0.31"
wayland-backend = "0.3"
wayland-protocols-wlr = { version = "0.3", features = ["server"] }
image = { version = "0.24.5", optional = true }
xcursor = { version = "0.3.3", optional = true }
xkbcommon = "0.6.0"
thiserror = "1"
anyhow = "1"
usvg = "0.37.0"
rand = "0.8"
tokio = { version = "1", features = ["full"] }
fps_ticker = { version = "1.0.0", optional = true }
xdgkit = "3.2.5"
freedesktop-icons = "0.2.4"
freedesktop-desktop-entry = "0.7.5"
shell-words = "1.1"
tracing = { version = "0.1.37", features = [
    "max_level_trace",
    "release_max_level_debug",
] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
puffin_http = { version = "0.16", optional = true }
profiling = { version = "1.0" }
renderdoc = { version = "0.11.0", optional = true }
serde = "1.0.213"
toml = "0.8.19"
once_cell = "1.20"
paste = "1.0.15"
zbus = "4"
pipewire = "0.9"
memfd = "0.6"
memmap2 = "0.9"

[dependencies.lay-rs]
# path = "../layers"
git = "https://github.com/nongio/layers"
tag = "v1.2.0"
features = ["export-taffy"]

[dependencies.smithay-drm-extras]
# path = "../smithay/smithay-drm-extras"
git = "https://github.com/Smithay/smithay"
# Updated to include fix for viewporter data race (PR #1623)
# Fixes Chrome crashes when scrolling/fullscreen: https://github.com/smithay/smithay/issues/1622
rev = "5186cf7dec2472a91e3c248772954b1141dab7f2"
optional = true

[dependencies.smithay]
# path = "../smithay"
git = "https://github.com/Smithay/smithay"
# Updated to include fix for viewporter data race (PR #1623)
# Fixes Chrome crashes when scrolling/fullscreen: https://github.com/smithay/smithay/issues/1622
rev= "5186cf7dec2472a91e3c248772954b1141dab7f2"
default-features = false
features = [
    "backend_winit",
    "wayland_frontend",
    "desktop",
    "backend_gbm",
    "backend_drm",
    "renderer_pixman",
]

[dependencies.x11rb]
default-features = false
features = ["composite"]
optional = true
version = "0.12.0"


# [workspace]
# members = ["wlcs_screencomposer"]


[features]
perf-counters = []
default = ["egl", "winit", "x11", "udev", "debug", "profile", "debugger", "renderer_sync"]
debug = ["image/png", "renderdoc", "debugger"] # "fps_ticker", 
debugger = ["lay-rs/debugger"]
profile = ["profile-with-puffin", "lay-rs/profile-with-puffin"]
ticker = ["fps_ticker"]
egl = ["smithay/use_system_lib", "smithay/backend_egl"]
test_all_features = ["default", "debug"]
udev = [
    "smithay-drm-extras",
    "smithay/backend_libinput",
    "smithay/backend_udev",
    "smithay/backend_drm",
    "smithay/backend_gbm",
    "smithay/backend_vulkan",
    "smithay/backend_egl",
    "smithay/backend_session_libseat",
    "image",
    "smithay/renderer_gl",
    "smithay/renderer_multi",
    "xcursor",
]
winit = ["smithay/backend_winit", "smithay/backend_drm"]
x11 = [
    "smithay/backend_x11",
    "x11rb",
    "smithay/renderer_gl",
    "smithay/backend_vulkan",
]
xwayland = [
    "smithay/xwayland",
    "x11rb",
    "smithay/x11rb_event_source",
    "xcursor",
]
profile-with-puffin = ["profiling/profile-with-puffin", "puffin_http"]
profile-with-tracy = ["profiling/profile-with-tracy"]
profile-with-tracy-mem = ["profile-with-tracy"]
renderer_sync = []

[workspace]
members = [
    "components/xdg-desktop-portal-sc",
    "components/apps-manager",
    "sample-clients/client-rainbow",
    "sample-clients/hello-layers",
    "sample-clients/hello-design",
    "sample-clients/submenu",
    "sample-clients/submenu-gtk",
]
