[package]
name = "wlcs_screencomposer"
version = "0.0.1"
license = "MIT"
publish = false
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
smithay = { path = "../../smithay", default-features = false, features = [
    "wayland_frontend",
    "backend_egl",
    "use_system_lib",
] }
screen-composer = { path = "../", default-features = false }
layers = { path = "../../layers", features = ["export-taffy"] }
wayland-sys = { version = "0.30.1", features = ["client", "server"] }
libc = "0.2"
memoffset = "0.6"
cgmath = "0.18"
nix = "0.24"
