[package]
name = "xdg-desktop-portal-otto"
version = "0.1.0"
edition = "2021"
authors = ["Riccardo Canalicchio <riccardo.canalicchio(at)gmail.com"]
description = "Otto implementation of the org.freedesktop.portal interface"
license = "MIT"
publish = false

[dependencies]
async-io = "2"
anyhow = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
zbus = "4"
