[package]
name = "xdg-desktop-portal-screencomposer"
version = "0.1.0"
edition = "2021"
authors = ["Riccardo Canalicchio <riccardo.canalicchio(at)gmail.com"]
description = "ScreenComposer implementation of the org.freedesktop.portal interface"
license = "MIT"
publish = false

[dependencies]
async-io = "2"
async-process = "1"
anyhow = "1.0"
calloop = "0.12"
futures = "0.3"
memmap2 = "0.9"
nix = { version = "0.28", default-features = false, features = ["fs"] }
pipewire = { version = "0.9.2", features = ["v0_3_77"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
smithay-client-toolkit = { version = "0.17", default-features = false, features = ["calloop"] }
thiserror = "1.0"
wayland-client = "0.31.11"
wayland-protocols = { version = "0.31.2", features = ["client", "unstable"] }
wayland-protocols-wlr = { version = "0.2.0", features = ["client"] }
zbus = "4"
