[package]
name = "client-rainbow"
version = "0.1.0"
edition = "2021"
authors = ["ScreenComposer Samples"]
description = "Wayland dma-buf client that animates rainbow solid colours"
license = "MIT"
publish = false

[dependencies]
anyhow = "1.0"
wayland-client = "0.31"
drm-fourcc = "2.2"
libc = "0.2"
wayland-protocols = { version = "0.32.9", default-features = false, features = ["unstable", "client"] }
wayland-scanner = "0.31.7"
gbm = { version = "0.16", default-features = false }
