[package]
name = "pipewire-video-source"
version = "0.1.0"
edition = "2021"
authors = ["ScreenComposer Samples"]
description = "Example PipeWire video source that generates synthetic frames"
license = "MIT"
publish = false

[dependencies]
anyhow = "1.0"
pipewire = { version = "0.9.2", features = ["v0_3_40"] }
memfd = "0.6"
memmap2 = "0.9"
